--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,174 @@ Colors:
 
 Text: 1A1A1A
 Green: #00B172
-White: #FFF
+#FFF: ##FFF
 
 */
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
+
+/* General Site Styling */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1em;
+    font-weight: 400;
+}
+
+
+/* Main Selectors */
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+/* Logo */
+
+nav img {
+    width: 130px;
+    padding: 15px 20px;
+    object-fit: contain;
+}
+
+ul {
+    display: flex;
+    list-style-type: none;
+    padding: 25px 15px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-size: 0.9em;
+    padding: 10px;
+}
+
+
+/* Image of header */
+
+header {
+    height: 600px;
+    background-image: url("../images/landing.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+h1 {
+    color: #fff;
+    font-size: 3.125em;
+    font-weight: 500;
+    padding: 0.5em;
+}
+
+.header p {
+    color: #fff;
+    font-size: 1.25em;
+    max-width: 70%;
+    font-weight: 200;
+}
+
+
+/* section 1 */
+
+h2 {
+    color: black;
+    text-align: center;
+    font-size: 1.25em;
+    font-weight: 600;
+    margin: 1.5em;
+}
+
+.iconosDiv {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: baseline;
+    padding: 20px;
+}
+
+.iconosDiv div {
+    align-items: center;
+    text-align: center;
+    padding: 1.25em;
+    width: 33.3%;
+}
+
+.iconosDiv img {
+    max-width: 5em;
+}
+
+h3 {
+    padding: 20px;
+    color: #00b172;
+    font-size: 1em;
+    font-weight: 700;
+}
+
+.iconosDiv p {
+    font-size: 0.938em;
+}
+
+
+/* section 2 */
+
+.greenSection {
+    background-color: #00b172;
+    display: flex;
+    flex-direction: row;
+    padding: 60px;
+}
+
+.greenSection h2 {
+    /* text-decoration-line: underline; */
+    border-bottom: 0.1em solid #fff;
+    padding-bottom: 5px;
+    color: #fff;
+    margin: 0;
+    font-weight: 500;
+    font-size: 25px;
+}
+
+#textGreenSection {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+}
+
+.greenSection h3,
+.greenSection p {
+    color: #fff;
+    padding-top: 30px;
+    padding-left: 0;
+}
+
+.greenSection p {
+    font-size: 0.8em;
+    line-height: 1.6em;
+    font-weight: 200;
+    padding-top: 10px;
+    margin-top: 0;
+}
+
+#iconWhite {
+    width: 80px;
+    object-fit: contain;
+    align-self: center;
+    padding-right: 70px;
+}
+
+#app {
+    width: 200px;
+    object-fit: contain;
+    margin: 20px;
+    align-self: flex-start;
+}
